Atualizando package.json e app.module.ts

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "footsizer-fronted",
+  "name": "footsizer-frontend",
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
@@ -26,13 +26,8 @@
     "zone.js": "~0.12.0"
   },
   "devDependencies": {
-<<<<<<< HEAD
     "@angular-devkit/build-angular": "^15.0.4",
     "@angular/cli": "~15.0.4",
-=======
-    "@angular-devkit/build-angular": "^15.2.11",
-    "@angular/cli": "^15.2.11",
->>>>>>> 78495cd (Primeiro commit do projeto Footsizer Frontend)
     "@angular/compiler-cli": "^15.0.0",
     "@types/jasmine": "~4.3.0",
     "jasmine-core": "~4.5.0",
